package com.dev.alan.patterns.structural.proxy;

// Subject

public interface Video {
    void play();
}
